# cish

./: CMakeLists.txt  build.sh  cish  test.c  test.cish  test2.c
include/: cish.hpp  kstring.h  linkedlist.hpp
include/cish/: bytecode.hpp  compile-ctx.hpp  compile-pass.hpp  compile.hpp  interpret.hpp  keyword.hpp  lexer-state.hpp  lexer.hpp  node.hpp  node2.hpp  parse-node.hpp  parse-node2.hpp  parser-gen.hpp  parser.hpp  prod-node.hpp  stack.hpp  strtab.hpp  symbol.hpp  symtab.cpp  symtab.hpp  token-stream.hpp  token.hpp  type.hpp  vm.hpp
include/util/: bitmanip.hpp  tuple.hpp
src/: ast.cpp  cish.cpp  main.cpp  mpc.c
src/assembler/: CMakeLists.txt  assembler.cpp  assembler.hpp  assembler2.cpp  symtab.cpp  symtab.hpp
src/cish/: CMakeLists.txt  compile.cpp  keyword.cpp  node.cpp  node2.cpp  symbol.cpp  symtab.cpp  symtab.hpp  token-stream.cpp  token.cpp
src/compile/: CMakeLists.txt  compile-ctx.cpp  compile-pass.cpp  compile.cpp  pass.hpp  pass0.cpp  pass1.cpp  pass1.hpp  pass2.cpp  print.cpp
src/interpret/: interpret.cpp
src/lexer/: CMakeLists.txt  functional.cpp  lexer-state.cpp  lexer-state.hpp  lexer.cpp  lexer.hpp  lexer2.cpp
src/parser/: CMakeLists.txt  astnode.hpp  astnode2.hpp  functional.cpp  parse-node.cpp  parse.cpp  parser.cpp  parser.hpp  parser2.cpp  parser2.hpp  precedence.cpp  prod-node.cpp  production-old.cpp  production.cpp  production.hpp  visitor.hpp
src/parser_gen/: CMakeLists.txt  parser-gen.cpp
src/vm/: CMakeLists.txt  bytecode.cpp  bytecode.hpp  ctx.cpp  ctx.hpp  emit.hpp  vm.cpp  vm.hpp
